<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/quote_background"
        android:orientation="vertical">

        <LinearLayout
            android:background="@color/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_fragment_quote"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_4dp"
            android:paddingTop="@dimen/padding_4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/position_fragment_instrument_id"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="@dimen/font_size_tiny_high"
                app:autoSizeMaxTextSize="@dimen/font_size_normal"
                app:autoSizeStepGranularity="1sp"
                android:textColor="@color/title_white"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/position_fragment_direction"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="@dimen/font_size_tiny_high"
                app:autoSizeMaxTextSize="@dimen/font_size_normal"
                app:autoSizeStepGranularity="1sp"
                android:textColor="@color/title_white"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/position_fragment_volume"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="@dimen/font_size_tiny_high"
                app:autoSizeMaxTextSize="@dimen/font_size_normal"
                app:autoSizeStepGranularity="1sp"
                android:textColor="@color/title_white"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/position_fragment_available"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="@dimen/font_size_tiny_high"
                app:autoSizeMaxTextSize="@dimen/font_size_normal"
                app:autoSizeStepGranularity="1sp"
                android:textColor="@color/title_white"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="end|center_vertical"
                android:text="@string/position_fragment_average_open_price"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="@dimen/font_size_tiny_high"
                app:autoSizeMaxTextSize="@dimen/font_size_normal"
                app:autoSizeStepGranularity="1sp"
                android:textColor="@color/title_white"
                android:textSize="@dimen/font_size_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="end|center_vertical"
                android:text="@string/position_fragment_profit_each"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="@dimen/font_size_tiny_high"
                app:autoSizeMaxTextSize="@dimen/font_size_normal"
                app:autoSizeStepGranularity="1sp"
                android:textColor="@color/title_white"
                android:textSize="@dimen/font_size_normal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:background="@color/divider_white"></View>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <ImageView
            android:visibility="gone"
            android:scaleType="center"
            android:src="@mipmap/ic_mobile_account_no_position"
            android:id="@+id/see_md"
            android:layout_width="match_parent"
            android:layout_height="90dp" />

    </LinearLayout>
</layout>
