<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.xinyi.shinnyfutures.utils.TimeUtils"></import>
        <import type="com.xinyi.shinnyfutures.utils.MathUtils"></import>

        <variable
            name="account"
            type="com.xinyi.shinnyfutures.model.bean.accountinfobean.AccountEntity"></variable>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_light"
        android:orientation="vertical">

        <include layout="@layout/view_toolbar"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_date"
                android:text="@string/account_activity_date"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{TimeUtils.nowTime}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_static_balance"
                android:text="@string/account_activity_static_balance"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_static_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.pre_balance, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_close_profit"
                android:text="@string/account_activity_close_profit"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_close_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.close_profit, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_position_profit"
                android:text="@string/account_activity_position_profit"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_position_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.position_profit, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_commission"
                android:text="@string/account_activity_commission"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_commission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.commission, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@color/bg_gray_light_more"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_balance"
                android:text="@string/account_activity_balance"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.balance, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_margin_using"
                android:text="@string/account_activity_margin_using"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_margin_using"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.margin, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_margin_frozen"
                android:text="@string/account_activity_margin_frozen"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_margin_frozen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.frozen_margin, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_commission_frozen"
                android:text="@string/account_activity_commission_frozen"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_commission_frozen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.frozen_commission, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_premium_frozen"
                android:text="@string/account_activity_premium_frozen"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_premium_frozen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.frozen_premium, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/bg_gray_light_more"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_available"
                android:text="@string/account_activity_available"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.available, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@color/bg_gray_light_more"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_deposit"
                android:text="@string/account_activity_deposit"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.deposit, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/account_reachable"
                android:text="@string/account_activity_withdraw"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/account_reachable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{MathUtils.round(account.withdraw, 2)}"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </LinearLayout>
</layout>
